fix: 역직렬화 오류 해결을 위한 서비스 코드 수정